--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>HomePage</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='estilo.css')}}">
 </head>
 <body>
-    <h1>E ai, Luan aqui!</h1>
+    <h1 id= "teste" >E ai, Luan aqui!</h1>
     <p>Eu sou o luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.</p>
     <p>Estou em busca do primeiro emprego, porém, antes de conseguir eu estou desenvolvendo projetos pessoais e trabalhando como freelancer para ganhar experiência e portifólio.</p>
     <h2>Conhecimento:</h2>
