atualizei os Livros e coloquei o link de compra da amazon.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,16 +28,22 @@
     <h1>Livros:</h1>
         <h2>Pretendo ler em 2025:</h2>
         <ul>
-            <li>Pense em python</li>
+            <li><a href="https://www.amazon.com.br/Entendendo-Algoritmos-Ilustrado-Programadores-Curiosos/dp/8575225634/" target="_blank">Entendendo Algoritmos: Um Guia Ilustrado Para Programadores e Outros Curiosos</a></li>
+            <li><a href="https://www.amazon.com.br/Programador-Pragm%C3%A1tico-Aprendiz-Mestre-ebook/dp/B019HM0H90/" target="_blank">O programador pragmático: De Aprendiz a Mestre</a></li>
+            <li><a href="https://www.amazon.com.br/C%C3%B3digo-Limpo-Robert-C-Martin-ebook/dp/B085Q2K632/" target="_blank">Código limpo</a></li>
+            <li></li>
         </ul>
         <h2>Lidos:</h2>
         <ul>
-        <li></li>
+            <li><a href="https://www.amazon.com.br/Pense-Python-Como-Cientista-Computa%C3%A7%C3%A3o/dp/8575225081/" target="_blank">Pense em Python: Pense Como um Cientista da Computação</a></li>
+            <li><a href="https://www.amazon.com.br/Introdu%C3%A7%C3%A3o-Linguagem-SQL-Abordagem-Iniciantes/dp/8575225014/" target="_blank">Introdução à Linguagem SQL: Abordagem Prática Para Iniciantes</a></li>
+            <li><a href="https://www.amazon.com.br/Do-mil-milh%C3%A3o-cortar-cafezinho-ebook/dp/B07HQWPVRS/" target="_blank">Do mil ao milhão: Sem cortar o cafezinho</a></li>
+            <li><a href="https://www.amazon.com.br/Ultra-aprendizado-habilidades-valiosas-competi%C3%A7%C3%A3o-carreira-ebook/dp/B08T3GNZFJ/" target="_blank">Ultra-aprendizado: Domine habilidades valiosas, seja mais esperto que a competição e dê um impulso na sua carreira</a></li>
+
         </ul>
     </div>
-    <h2>Conhecimento:</h2>
-    <ul>
-        <li class="sub-titulos">Python;</li>
+    <h2>Conhecimentos:</h2>
+        <h3 class="sub-titulos">Python;</h3>
         <ul type="circle">
             <li> -Sintaxe e variáveis</li>
             <li> -Tipos, listas, tuplas, dicionários.</li>
@@ -45,15 +51,13 @@
             <li> -Funções e argumentos</li>
             <li> -Programação orientada a objetos (Classes)</li>
         </ul>
-        <li class= "sub-titulos">Banco de Dados (MySQL);</li>
+        <h3 class= "sub-titulos">Banco de Dados (MySQL);</h3>
         <ul type= "circle">
             <li> -Criar Banco de dados, configurar e gerenciar tabelas.</li>
             <li> -Hospedar banco de dados na nuvem.</li>
             <li> -CRUD</li>
             <li> -Sintaxe</li>
         </ul>
-        <li class="sub-titulos">HTML e CSS;</li>
-        <p></p>
-    </ul>
+        <h3 class="sub-titulos">HTML e CSS;</h3>
 </body>
 </html>
