--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,16 +11,16 @@
     <h1 id = "teste" >LUAN FERREIRA LIMA</h1>
     <p> Eu sou o Luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.<br>
         Estou em busca do primeiro emprego, porém, antes de conseguir estou desenvolvendo projetos pessoais e
-        trabalhando como freelancer para ganhar experiência e portifólio.<br>
-        Abaixo tenho alguns livros que pretendo ler, outros que já li e o meu portfólio com alguns projetos pessoais.
-
+        trabalhando como<br> freelancer para ganhar experiência e portifólio.<br></p>
+    <p>
+        Abaixo tenho alguns livros que pretendo ler, outros que já li e o meu portfólio com alguns projetos pessoais:
     </p>
     <div>
         <h1>Redes sociais:</h1>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-instagram.webp') }}" alt="Logo-Instagram">
-        <a href="https://www.instagram.com/luan_lima280/" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/luan_lima280/" target="_blank">Instagram</a><br>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-github.png')}}" alt="Logo-GitHub">
-        <a href="https://github.com/Luan280" target="_blank">GitHub</a>
+        <a href="https://github.com/Luan280" target="_blank">GitHub</a><br>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-linkedin.png')}}" alt="Logo-Linkedin">
         <a href="https://www.linkedin.com/in/luan-lima280/" target="_blank">Linkedin</a>
     </div>
@@ -59,5 +59,21 @@
             <li> -Sintaxe</li>
         </ul>
         <h3 class="sub-titulos">HTML e CSS;</h3>
+        <ul type= "circle">
+            <li>Estrutura básica em HTML</li>
+            <ul>
+                <li>Elementos essenciais: < html >, < head >, < title >, < body >.</li>
+                <li>Uso correto de tags de abertura e fechamento.</li>
+                <li>Conheço as tags HTML mais comuns, como < p >, < h1 >, < a >, < img >, < div >, < span >, etc.</li>
+                <li>Atributos para às tags, como id, class, href, src, etc.</li>
+            </ul>
+            <li>Estruturação de Conteúdo:</li>
+            <ul>
+                <li>Utilização de tags de parágrafo < p > e títulos < h1 >, < h2 >, ..., < h6 >).</li>
+                <li>Criação de listas ordenadas < ol > e não ordenadas < ul ></li>
+                <li>Uso de listas aninhadas.</li>
+
+            </ul>
+        </ul>
 </body>
 </html>
