--- a/static/estilo.css
+++ b/static/estilo.css
@@ -1,7 +1,47 @@
-#teste{
-    align-self: center;
-    width: 500px;
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main{
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    width: 1100px;
+}
+body{
+    background-image: linear-gradient(to right, #455559, #28403D, #2F3D40);
+
  }
-.body{
-    align-items: center;
+ p{
+    font-size: 130%;
+    text-align: justify;
+    padding: 25px;
+ }
+ h1{
+    text-align: center;
+    padding: 25px;
+    font-size: 45px;
+ }
+
+ h2{
+    font-size: 35px;
+ }
+
+ h3{
+    font-size: 20px;
+ }
+ .img_principal{
+    text-align: center;
+ }
+ .logo_imagens{
+    width: 75px;
+    font-size: 150%;
+ }
+ .livros{
+    font-size: 130%;
+    text-align: justify;
+ }
+ li{
+    padding: 5px;
  }
