--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,34 +7,34 @@
     
 </head>
 <body>
-    <main>
-    <div class="img_principal">
-        <img src="{{ url_for('static',filename='imagens/logo_luan_lima.png')}}" alt="Luan Lima Pixel Art">
-    </div>
+    
 
-    <h1>LUAN FERREIRA LIMA</h1>
+    <main>
+    <h1 class="titulos_main">LUAN FERREIRA LIMA</h1>
     <p> Eu sou o Luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.
         Estou em busca do primeiro emprego, porém, antes de conseguir estou desenvolvendo projetos pessoais e
         trabalhando como freelancer para ganhar experiência e portifólio.
-        </p>
-    <h2>Redes sociais:</h1>
+    </p>
+    
+    <h2 class="titulos_main">Redes sociais:</h2>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-instagram.webp') }}" alt="Logo-Instagram">
         <a class="logo_imagens" href="https://www.instagram.com/luan_lima280/" target="_blank">Instagram</a><br>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-github.png')}}" alt="Logo-GitHub">
         <a class="logo_imagens" href="https://github.com/Luan280" target="_blank">GitHub</a><br>
         <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-linkedin.png')}}" alt="Logo-Linkedin">
         <a class="logo_imagens" href="https://www.linkedin.com/in/luan-lima280/" target="_blank">Linkedin</a>
-    <h2>Livros:</h1>
-    <h3>Pretendo ler em 2025:</h2>
+    
+    <h2 class="titulos_main">Livros que vou ler em 2025:</h2>
     <div class="livros">
         <ul>
             <li><a href="https://www.amazon.com.br/Entendendo-Algoritmos-Ilustrado-Programadores-Curiosos/dp/8575225634/" target="_blank">Entendendo Algoritmos: Um Guia Ilustrado Para Programadores e Outros Curiosos</a></li>
             <li><a href="https://www.amazon.com.br/Programador-Pragm%C3%A1tico-Aprendiz-Mestre-ebook/dp/B019HM0H90/" target="_blank">O programador pragmático: De Aprendiz a Mestre</a></li>
-            <li><a href="https://www.amazon.com.br/C%C3%B3digo-Limpo-Robert-C-Martin-ebook/dp/B085Q2K632/" target="_blank">Código limpo</a></li>
-            <li></li>
+            <li><a href="https://www.amazon.com.br/C%C3%B3digo-Limpo-Robert-C-Martin-ebook/dp/B085Q2K632/" target="_blank">Código Limpo: Habilidades Práticas do Agile Software</a></li>
+            <li><a href="https://www.amazon.com.br/Seja-Programador-Foda-carreira-sucesso-ebook/dp/B08SMPL46V/" target="_blank">Seja um Programador Foda!: Manual para uma carreira de sucesso</a></li>
+            <li><a href="https://www.amazon.com.br/Arquitetura-Limpa-Artes%C3%A3o-Estrutura-Software/dp/8550804606/" target="_blank">Arquitetura Limpa: o Guia do Artesão Para Estrutura e Design de Software</a></li>
         </ul>
     </div>
-    <h3>Lidos:</h2>
+    <h2 class="titulos_main">Abaixo tem uma lista de livros que eu li durante a vida:</h2>
     <div class="livros">
         <ul>
             <li><a href="https://www.amazon.com.br/Pense-Python-Como-Cientista-Computa%C3%A7%C3%A3o/dp/8575225081/" target="_blank">Pense em Python: Pense Como um Cientista da Computação</a></li>
@@ -45,7 +45,7 @@
     </div>
     </main>
     <div class="conhecimentos">
-    <h2>Conhecimentos:</h2>
+    <h1>Conhecimentos:</h1>
         <h3 class="sub-titulos">Python;</h3>
         <ul type="circle">
             <li> -Sintaxe e variáveis</li>
