--- a/static/estilo.css
+++ b/static/estilo.css
@@ -1,61 +1,100 @@
-main{
-   background-color: #FEFEFE;
-   margin: auto;
-   padding: 20px;
-   border-radius: 30px;
-   width: 1100px;
-   color: black;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+*{
+  font-size: 20px;
 }
+header{
+  background-color: #1a59ac;
+}
+header h1{
+color: black;
+}
+
+header ul li a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li {
+  display: inline;
+  margin: 10px;
+}
+
+nav {
+  text-align: right;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+main{
+  background-color: #FEFEFE;
+  margin: auto;
+  padding: 20px;
+  border-radius: 30px;
+  width: 1100px;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+main a{
+  color: #1a59ac;
+  text-decoration: none;
+}
+main a:hover{
+text-decoration: underline  ;
+}
+main h1 h2 h3{
+  color: #3c4258;
+}
+
+.imagens img {
+  display: inline;
+  width: 50px;
+  padding: 5px;
+}
+
+.livros li{
+  text-align: justify;
+  padding: 5px;
+}
+
+.conhecimentos{
+  margin: auto;
+  width: 1140px;
+  padding: 30px;
+  color: white;
+}
+.conhecimentos li{
+  text-decoration: none;
+
+}
+.conhecimentos h1{
+  color: white;
+}
+
 body{
-   margin: auto;
-   text-align: justify;
-   background-color: #282B33;
-   font-family: monospace;
-   font-size: 15px;
+  margin: auto;
+  text-align: justify;
+  background-color: #282B33;
+  font-family: monospace;
+  color: white;
+}
+ 
+p{
+  text-align: justify;
+  padding: 20px;
+}
+h1{
+  text-align: center;
+  padding: 25px;
+  font-size: 45px;
+}
 
- }
- .titulos_main{
-   color: #3c4258;
- }
- p{
-   font-size: 130%;
-   text-align: justify;
-   padding: 20px;
- }
- h1{
-   color: #3c4258;
-   text-align: center;
-   padding: 25px;
-   font-size: 45px;
- }
+h2{
+  font-size: 30px;
+}
 
- h2{
-   font-size: 30px;
- }
-
- h3{
-   font-size: 20px;
- }
- .img_principal{
-   text-align: center;
- }
- .logo_imagens{
-   width: 75px;
-   font-size: 150%;
- }
- .livros{
-   font-size: 130%;
-   text-align: justify;
- }
- li{
-   padding: 5px;
- }
-
- .conhecimentos{
-   margin: auto;
-   width: 1140px;
-   padding: 30px;
-   font-size: 20px;
-   color: white;
- }
+h3{
+  font-size: 20px;
+}
