--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,73 +6,87 @@
     <link rel="stylesheet" href="{{url_for('static', filename='estilo.css')}}">
     
 </head>
+<header>
+    <h1>Teste</h1>
+    <nav>
+        <ul>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
-    
-
     <main>
-    <h1 class="titulos_main">LUAN FERREIRA LIMA</h1>
-    <p> Eu sou o Luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.
-        Estou em busca do primeiro emprego, porém, antes de conseguir estou desenvolvendo projetos pessoais e
-        trabalhando como freelancer para ganhar experiência e portifólio.
-    </p>
-    
-    <h2 class="titulos_main">Redes sociais:</h2>
-        <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-instagram.webp') }}" alt="Logo-Instagram">
-        <a class="logo_imagens" href="https://www.instagram.com/luan_lima280/" target="_blank">Instagram</a><br>
-        <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-github.png')}}" alt="Logo-GitHub">
-        <a class="logo_imagens" href="https://github.com/Luan280" target="_blank">GitHub</a><br>
-        <img class="logo_imagens" src="{{ url_for('static', filename='imagens/logo-linkedin.png')}}" alt="Logo-Linkedin">
-        <a class="logo_imagens" href="https://www.linkedin.com/in/luan-lima280/" target="_blank">Linkedin</a>
-    
-    <h2 class="titulos_main">Livros que vou ler em 2025:</h2>
-    <div class="livros">
-        <ul>
-            <li><a href="https://www.amazon.com.br/Entendendo-Algoritmos-Ilustrado-Programadores-Curiosos/dp/8575225634/" target="_blank">Entendendo Algoritmos: Um Guia Ilustrado Para Programadores e Outros Curiosos</a></li>
-            <li><a href="https://www.amazon.com.br/Programador-Pragm%C3%A1tico-Aprendiz-Mestre-ebook/dp/B019HM0H90/" target="_blank">O programador pragmático: De Aprendiz a Mestre</a></li>
-            <li><a href="https://www.amazon.com.br/C%C3%B3digo-Limpo-Robert-C-Martin-ebook/dp/B085Q2K632/" target="_blank">Código Limpo: Habilidades Práticas do Agile Software</a></li>
-            <li><a href="https://www.amazon.com.br/Seja-Programador-Foda-carreira-sucesso-ebook/dp/B08SMPL46V/" target="_blank">Seja um Programador Foda!: Manual para uma carreira de sucesso</a></li>
-            <li><a href="https://www.amazon.com.br/Arquitetura-Limpa-Artes%C3%A3o-Estrutura-Software/dp/8550804606/" target="_blank">Arquitetura Limpa: o Guia do Artesão Para Estrutura e Design de Software</a></li>
-        </ul>
-    </div>
-    <h2 class="titulos_main">Abaixo tem uma lista de livros que eu li durante a vida:</h2>
-    <div class="livros">
-        <ul>
-            <li><a href="https://www.amazon.com.br/Pense-Python-Como-Cientista-Computa%C3%A7%C3%A3o/dp/8575225081/" target="_blank">Pense em Python: Pense Como um Cientista da Computação</a></li>
-            <li><a href="https://www.amazon.com.br/Introdu%C3%A7%C3%A3o-Linguagem-SQL-Abordagem-Iniciantes/dp/8575225014/" target="_blank">Introdução à Linguagem SQL: Abordagem Prática Para Iniciantes</a></li>
-            <li><a href="https://www.amazon.com.br/Do-mil-milh%C3%A3o-cortar-cafezinho-ebook/dp/B07HQWPVRS/" target="_blank">Do mil ao milhão: Sem cortar o cafezinho</a></li>
-            <li><a href="https://www.amazon.com.br/Ultra-aprendizado-habilidades-valiosas-competi%C3%A7%C3%A3o-carreira-ebook/dp/B08T3GNZFJ/" target="_blank">Ultra-aprendizado: Domine habilidades valiosas, seja mais esperto que a competição e dê um impulso na sua carreira</a></li>
-        </ul>
-    </div>
+        <section id="inicio">
+
+        <h1>LUAN FERREIRA LIMA</h1>
+                <p> Eu sou o Luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.
+                Estou em busca do primeiro emprego, porém, antes de conseguir estou desenvolvendo projetos pessoais e
+                trabalhando como freelancer para ganhar experiência e portifólio.
+                </p>
+        <h2>Redes sociais:</h2>
+            <div class="imagens">
+                <img src="{{ url_for('static', filename='imagens/logo-instagram.webp') }}" alt="Logo-Instagram">
+                    <a href="https://www.instagram.com/luan_lima280/" target="_blank">Instagram</a> onde compartilho um pouco mais da minha vida nos stories<br>
+
+                <img src="{{ url_for('static', filename='imagens/logo-github.png')}}" alt="Logo-GitHub">
+                    <a href="https://github.com/Luan280" target="_blank">GitHub</a> com códigos e projetos pessoais<br>
+
+                <img src="{{ url_for('static', filename='imagens/logo-linkedin.png')}}" alt="Logo-Linkedin">
+                    <a href="https://www.linkedin.com/in/luan-lima280/" target="_blank">Linkedin</a> 
+            </div>
+        <h2>Livros que vou ler em 2025:</h2>
+            <div class="livros">
+                <ul>
+                    <li><a href="https://www.amazon.com.br/Entendendo-Algoritmos-Ilustrado-Programadores-Curiosos/dp/8575225634/" target="_blank">Entendendo Algoritmos: Um Guia Ilustrado Para Programadores e Outros Curiosos</a></li>
+                    <li><a href="https://www.amazon.com.br/Programador-Pragm%C3%A1tico-Aprendiz-Mestre-ebook/dp/B019HM0H90/" target="_blank">O programador pragmático: De Aprendiz a Mestre</a></li>
+                    <li><a href="https://www.amazon.com.br/C%C3%B3digo-Limpo-Robert-C-Martin-ebook/dp/B085Q2K632/" target="_blank">Código Limpo: Habilidades Práticas do Agile Software</a></li>
+                    <li><a href="https://www.amazon.com.br/Seja-Programador-Foda-carreira-sucesso-ebook/dp/B08SMPL46V/" target="_blank">Seja um Programador Foda!: Manual para uma carreira de sucesso</a></li>
+                    <li><a href="https://www.amazon.com.br/Arquitetura-Limpa-Artes%C3%A3o-Estrutura-Software/dp/8550804606/" target="_blank">Arquitetura Limpa: o Guia do Artesão Para Estrutura e Design de Software</a></li>
+                </ul>
+        <h2>Abaixo tem uma lista de livros que eu li durante a vida:</h2>
+                <ul>
+                    <li><a href="https://www.amazon.com.br/Pense-Python-Como-Cientista-Computa%C3%A7%C3%A3o/dp/8575225081/" target="_blank">Pense em Python: Pense Como um Cientista da Computação</a></li>
+                    <li><a href="https://www.amazon.com.br/Introdu%C3%A7%C3%A3o-Linguagem-SQL-Abordagem-Iniciantes/dp/8575225014/" target="_blank">Introdução à Linguagem SQL: Abordagem Prática Para Iniciantes</a></li>
+                    <li><a href="https://www.amazon.com.br/Do-mil-milh%C3%A3o-cortar-cafezinho-ebook/dp/B07HQWPVRS/" target="_blank">Do mil ao milhão: Sem cortar o cafezinho</a></li>
+                    <li><a href="https://www.amazon.com.br/Ultra-aprendizado-habilidades-valiosas-competi%C3%A7%C3%A3o-carreira-ebook/dp/B08T3GNZFJ/" target="_blank">Ultra-aprendizado: Domine habilidades valiosas, seja mais esperto que a competição e dê um impulso na sua carreira</a></li>
+                </ul>
+            </div>
+        </section>
     </main>
     <div class="conhecimentos">
-    <h1>Conhecimentos:</h1>
-        <h3 class="sub-titulos">Python;</h3>
-        <ul type="circle">
-            <li> -Sintaxe e variáveis</li>
-            <li> -Tipos, listas, tuplas, dicionários.</li>
-            <li> -Condições e loops</li>
-            <li> -Funções e argumentos</li>
-            <li> -Programação orientada a objetos (Classes)</li>
-        </ul>
-        <h3 class= "sub-titulos">Banco de Dados (MySQL);</h3>
-        <ul type= "circle">
-            <li> -Criar Banco de dados, configurar e gerenciar tabelas.</li>
-            <li> -Hospedar banco de dados na nuvem.</li>
-            <li> -CRUD</li>
-            <li> -Sintaxe</li>
-        </ul>
-        <h3 class="sub-titulos">HTML e CSS;</h3>
-        <ul type= "circle">
-            <li>- Estrutura básica em HTML</li>
-            <li>- Elementos essenciais: < html >, < head >, < title >, < body >.</li>
-            <li>- Uso correto de tags de abertura e fechamento.</li>
-            <li>- Conheço as tags HTML mais comuns, como < p >, < h1 >, < a >, < img >, < div >, < span >, etc.</li>
-            <li>- Atributos para às tags, como id, class, href, src, etc.</li>
-            <li>Estruturação de Conteúdo:</li>
-            <li>- Utilização de tags de parágrafo < p > e títulos < h1 >, < h2 >, ..., < h6 >).</li>
-            <li>- Criação de listas ordenadas < ol > e não ordenadas < ul ></li>
-            <li>- Uso de listas aninhadas.</li>
-        </ul>
+        <h1>Conhecimentos:</h1>
+            <h3>Python;</h3>
+                <ul type="none">
+                    <li> -Sintaxe e variáveis</li>
+                    <li> -Tipos, listas, tuplas, dicionários.</li>
+                    <li> -Condições e loops</li>
+                    <li> -Funções e argumentos</li>
+                    <li> -Programação orientada a objetos (Classes)</li>
+                </ul>
+            <h3>Banco de Dados (MySQL);</h3>
+                <ul type="none">
+                    <li> -Criar Banco de dados, configurar e gerenciar tabelas.</li>
+                    <li> -Hospedar banco de dados na nuvem.</li>
+                    <li> -CRUD</li>
+                    <li> -Sintaxe</li>
+                </ul>
+            <h3>HTML e CSS;</h3>
+                <ul type="none">
+                    <li>- Estrutura básica em HTML</li>
+                    <li>- Elementos essenciais: < html >, < head >, < title >, < body >.</li>
+                    <li>- Uso correto de tags de abertura e fechamento.</li>
+                    <li>- Conheço as tags HTML mais comuns, como < p >, < h1 >, < a >, < img >, < div >, < span >, etc.</li>
+                    <li>- Atributos para às tags, como id, class, href, src, etc.</li>
+                    <li>Estruturação de Conteúdo:</li>
+                    <li>- Utilização de tags de parágrafo < p > e títulos < h1 >, < h2 >, ..., < h6 >).</li>
+                    <li>- Criação de listas ordenadas < ol > e não ordenadas < ul ></li>
+                    <li>- Uso de listas aninhadas.</li>
+                </ul>
     </div>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Formas de entrar em contato.</p>
+    </section>
 </body>
 </html>
