Adicionando imagens e arrumando o header

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,9 +16,14 @@
     </nav>
 </header>
 <body>
+    <div id="hello-world">
+        <img src="{{url_for('static', filename='imagens/hello-world.png')}}" alt="Hello, world">
+    </div>
     <main>
         <section id="inicio">
-
+        <div id="foto-principal" >
+            <img src="{{url_for('static', filename='imagens/logo_99freela.png')}}" alt="Logo-Luan">
+        </div>
         <h1>LUAN FERREIRA LIMA</h1>
                 <p> Eu sou o Luan, atualmente cursando Engenharia de Software e trabalhando em uma escola como auxiliar de recreação.
                 Estou em busca do primeiro emprego, porém, antes de conseguir estou desenvolvendo projetos pessoais e
