--- a/static/estilo.css
+++ b/static/estilo.css
@@ -5,9 +5,13 @@ header{
   background-color: orange;
   margin: auto;
   display: flex;
-  height: 100px;
-  align-items: end;
+  width: 100%;
+  height: 50px;
+  align-items: center;
   justify-content: space-between; /* espaço igual entre elementos */
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 
 header h1{
@@ -16,7 +20,7 @@ color: black;
 
 header ul li a{
   color: white;
-  text-decoration: none;auto
+  text-decoration: none;
   font-weight: bold;
 }
 
@@ -29,6 +33,11 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
+#hello-world{
+  margin-top: 70px; /* Compensa a altura do header */
+  text-align: center;
+}
+
 main{
   background-color: #FEFEFE;
   margin: auto;
@@ -37,7 +46,8 @@ main{
   width: 1100px;
   color: black;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+  margin-top: 60px; /* Compensa a altura do header */
+};
 
 main a{
   color: #1a59ac;
@@ -50,6 +60,10 @@ main h2, h3{
   color: orange;
 }
 
+#foto-principal{
+  text-align: center;
+
+}
 .imagens img {
   display: inline;
   width: 50px;
